<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo_description">Shoe Store Inventory App</string>
    <string name="login_button_text">Sign In</string>
    <string name="register_button_text">Sign Up</string>
    <string name="welcome_text">Welcome to Shoe Store Inventory App!</string>
    <string name="welcome_description">All Brands Together</string>
    <string name="contine_text">Continue</string>
    <string name="easyaccess_image_text">Easy to Access!</string>
    <string name="introduction_header_text">Easy to Access!</string>
    <string name="introduction_description_test">Everything is as close as 1 click</string>
    <string name="findshoe_button_text">Find Shoe</string>
    <string name="shoe_list_header">Shoe List</string>
    <string name="product_sample_image_description">Sample product image.</string>
    <string name="sample_product_name">ABC Product</string>
    <string name="sample_company_name">ABC Company</string>
    <string name="sample_product_description">Lorem Ipsum</string>
    <string name="see_more_button_description">See more</string>
    <string name="login_page_title">Login</string>
    <string name="welcome_page_title">Welcome!</string>
    <string name="instructions_page_title">Instructions</string>
    <string name="sholist_page_title">Shoe List</string>
    <string name="new_shoe_name_text">Shoe Name</string>
    <string name="new_shoe_name_variable_text">Shoe Name</string>
    <string name="txt_shoe_company">Company</string>
    <string name="new_shoe_company_name_text">Company</string>
    <string name="shoe_size_text">Shoe Size</string>
    <string name="new_shoe_size_text">Shoe Size</string>
    <string name="new_shoe_description_label_text">Description</string>
    <string name="new_shoe_description_text">Description</string>
    <string name="cancel_text">Cancel</string>
    <string name="save_text">Save</string>
    <string name="new_shoe">New Shoe</string>
    <string name="username_edit">Username</string>
    <string name="password_edit">Password</string>
    <string name="menu_logout_text">Logout</string>
</resources>
