<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation.xml"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.screens.login.LoginFragment"
        android:label="@string/login_page_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:popEnterAnim="@anim/slide_in_right" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.screens.welcome.WelcomeFragment"
        android:label="@string/welcome_page_title"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:popEnterAnim="@anim/slide_in_right" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.screens.instructions.InstructionsFragment"
        android:label="@string/instructions_page_title"
        tools:layout="@layout/fragment_instructions">
        <action
            android:id="@+id/action_instructionsFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:enterAnim="@anim/slide_in_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.udacity.shoestore.screens.shoelist.ShoeListFragment"
        android:label="@string/sholist_page_title"
        tools:layout="@layout/fragment_shoe_list" >
        <action
            android:id="@+id/action_shoeListFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:popEnterAnim="@anim/slide_in_right" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.udacity.shoestore.screens.detail.DetailFragment"
        android:label="@string/new_shoe"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_detailFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment" />
    </fragment>
</navigation>