<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--
        I used a constraint layout on login page and on boarding pages because I wanted to design as
        responsive those screens as responsive and contents are centered and related to each other
        or they are related with screen borders. It was easy to design my pages with drag and drop.
        I aligned everything quickly.
    -->

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:label="@string/login_page_title"
    tools:context=".screens.login.LoginFragment">

    <ImageView
        android:id="@+id/applogo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_logo_description"
        android:src="@drawable/app_logo"
        app:layout_constraintBottom_toTopOf="@+id/login_email_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/login_email_edit"
        style="@style/loginMailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardview_light_background"
        android:hint="@string/username_edit"
        android:text="@string/username_edit"
        android:autofillHints="false"
        app:layout_constraintBottom_toTopOf="@+id/login_password_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/applogo_image" />

    <EditText
        android:id="@+id/login_password_edit"
        style="@style/loginPasswordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:backgroundTint="@color/cardview_light_background"
        android:text="@string/password_edit"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_edit"
        tools:ignore="LabelFor" />


    <Button
        android:id="@+id/login_button"
        style="@style/appButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login_button_text"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="@+id/login_password_edit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/login_password_edit"
        app:layout_constraintTop_toBottomOf="@+id/login_password_edit" />

    <Button
        android:id="@+id/register_button"
        style="@style/appButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_bg"
        android:text="@string/register_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>