<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.models.ShoeViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/shoelist_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".screens.shoelist.ShoeListFragment">

    <ScrollView
        android:id="@+id/shoelist_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/item_list_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/item_layout"
                style="@style/itemAreaStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <ImageView
                    android:id="@+id/sample_content_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/product_sample_image_description"
                    android:src="@drawable/app_logo" />

                <LinearLayout
                    android:id="@+id/item_detail_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/product_name_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/sample_product_name"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/product_company_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/sample_company_name"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/product_description_text"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_thin"
                        android:text="@string/sample_product_description"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/detail_btn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="false"
        android:contentDescription="@string/see_more_button_description"
        android:src="@drawable/see_more_button"
        app:backgroundTint="#1190cb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>